# AI-Fundamentals

./: .env  .env.example  Manual_requirement.txt  README.md  pyproject.toml  requirements.txt
CH-1_LLMs/: 1_API_Calls.ipynb  2_Embedding.ipynb
CH-2_RAG/: 1_RAG.ipynb
CH-2_RAG/chroma_db/: chroma.sqlite3
CH-3_Prompt_Engineering/: prompt_call.ipynb
CH-4_Agent/: 1_Tool_Binding.ipynb  2_ReAct_Agent.ipynb  3_Structured_Output.ipynb  4_prompt_templates.ipynb  5.1_RAG_Semantic.ipynb
CH-4_Agent/chroma_db_semantic/: chroma.sqlite3
